aks/tipc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tipc-backend
  namespace: tipc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tipc-backend
  template:
    metadata:
      labels:
        app: tipc-backend
    spec:
      containers:
      - name: tipc-backend
        image: acrfortipc.azurecr.io/tipc/tipc-backend:2023-08-02_10-52-57
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
      imagePullSecrets:
      - name: acrfortipc-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tipc-frontend
  namespace: tipc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tipc-frontend
  template:
    metadata:
      labels:
        app: tipc-frontend
    spec:
      containers:
      - name: tipc-frontend
        image: acrfortipc.azurecr.io/tipc/tipc-frontend:2023-07-29_12-07-28
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: acrfortipc-secret
