aks/tipc-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tipc-backend-service
  namespace: tipc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8083
  selector:
    app: tipc-backend
