aks/tipc-service-discovery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: category-service
  namespace: tipc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: category-app
---
apiVersion: v1
kind: Service
metadata:
  name: temp-service
  namespace: tipc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: temp-app
