aks/tipc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tipc-backend-service
  namespace: tipc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8083
  selector:
    app: tipc-backend
---
apiVersion: v1
kind: Service
metadata:
  name: tipc-frontend-service
  namespace: tipc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: tipc-frontend
