aks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tipc-ingress
  namespace: tipc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /tipc
            pathType: Prefix
            backend:
              service:
                name: tipc-backend-service
                port: 
                  number: 80
